--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # Code generation
+  # Testing
+  mockito: ^5.4.4
   build_runner: ^2.4.7
+  
+  # Code generation
   objectbox_generator: ^2.2.0
   injectable_generator: ^2.4.1
 
