Add comprehensive tests for dependency injection, AI data source, search bloc, and UI components
- Implement tests for the dependency injection container to ensure proper registration and retrieval of services.
- Create extensive unit tests for AIDataSource, covering category suggestions, model initialization, embedding generation, and similarity calculations.
- Develop tests for SearchBloc, including event handling for searching, adding, and deleting documents, with mock repository interactions.
- Add widget tests for AddDocumentPage and EditDocumentPage to validate UI elements, form validation, and state handling.
- Implement tests for DocumentCard and SearchBarWidget to ensure correct display and interaction behavior.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
 
   # Testing
   mockito: ^5.4.4
+  bloc_test: ^9.1.5
   build_runner: ^2.4.7
   
   # Code generation
